--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,11 +1,13 @@
 name: Lint
 on:
   push:
+    branches: [ main ]
     paths:
       - "**.go"
       - go.mod
       - go.sum
   pull_request:
+    branches: [ main ]
     paths:
       - "**.go"
       - go.mod
