--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,darwin/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: g14a/go-migrate:latest
