--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,12 +19,12 @@ builds:
       - arm64
 
 brews:
-  - github:
-      owner: g14a
-      name: homebrew-metana
-    folder: Formula
-    homepage: https://github.com/g14a/metana
-    description: An abstract migration tool written in Go for Go services.
+- tap:
+    owner: g14a
+    name: homebrew-metana
+  folder: Formula
+  homepage: https://github.com/g14a/metana
+  description: An abstract migration tool written in Go for Go services.
 
 nfpms:
 - maintainer: Gowtham Munukutla <gowtham.m81197@gmail.com>
