add custom template command

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ schema-mig
 schema
 # Test binary, built with `go test -c`
 *.test
-
+tmpl.go
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
