add extra tests and repair stuff

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Run tests
         run: |
-          go test ./...
+          go test $(go list ./... | grep -v github.com/g14a/metana/migrations)
 
       - name: Checkout
         uses: actions/checkout@v2
