--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
           ls -all
           pwd
           export POSTGRES_TEST_URL=${{ secrets.POSTGRES_TEST_URL }}
+          export MONGO_TEST_URL=${{ secrets.MONGO_TEST_URL }}
           go test -v $(go list ./... | grep -v github.com/g14a/metana/migrations)
 
       - name: Checkout
