save planet by running selected actions everytime

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ name: Go
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'cmd/**'
+      - 'pkg/**'
   pull_request:
     branches: [ main ]
 
