--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -3,11 +3,12 @@ name: "CodeQL"
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'pkg/**'
+      - 'cmd/**'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
-  schedule:
-    - cron: '18 14 * * 4'
 
 jobs:
   analyze:
