fix critical bugs and add tests

--- a/.metana.yml
+++ b/.metana.yml
@@ -1,2 +1,9 @@
-dir: testdata
-store: ''
+dir: migrations
+store: ""
+environments:
+- name: dev
+  store: ""
+- name: staging
+  store: ""
+- name: prod
+  store: ""
