--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Go CI
 
 on:
   push:
@@ -11,47 +11,51 @@ on:
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
+
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Go 1.x
-        uses: actions/setup-go@v2
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          go-version: ^1.16
-        id: go
+          go-version: '1.21'
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v1
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
-      - name: Get dependencies
-        run: |
-          go get -v -t -d ./...
+      - name: Install dependencies
+        run: go mod download
 
       - name: Run tests
+        env:
+          POSTGRES_TEST_URL: ${{ secrets.POSTGRES_TEST_URL }}
+          MONGO_TEST_URL: ${{ secrets.MONGO_TEST_URL }}
         run: |
-          ls -all
-          export POSTGRES_TEST_URL=${{ secrets.POSTGRES_TEST_URL }}
-          export MONGO_TEST_URL=${{ secrets.MONGO_TEST_URL }}
-          go test -v $(go list ./... | grep -v github.com/g14a/metana/migrations)
-
-      - name: Checkout
-        uses: actions/checkout@v2
+          go test -v $(go list ./... | grep -v /migrations)
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v4
         with:
           context: .
           platforms: linux/amd64,linux/arm64
