--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,7 +7,7 @@ release:
   name_template: Metana {{ .Version }}
 
 changelog:
-  skip: true
+  skip: true  # ❌ REMOVE this line completely, GoReleaser v2 does not support skip: true
 
 builds:
   - env: [CGO_ENABLED=0]
@@ -25,19 +25,19 @@ builds:
         - upx "{{ .Path }}"
 
 brews:
-- tap:
-    owner: g14a
-    name: homebrew-metana
-  folder: Formula
-  homepage: https://github.com/g14a/metana
-  description: An abstract migration tool written in Go for Go services.
+  - name: metana 
+    tap:
+      owner: g14a
+      name: homebrew-metana
+    homepage: https://github.com/g14a/metana
+    description: An abstract migration tool written in Go for Go services.
 
 nfpms:
-- maintainer: Gowtham Munukutla <gowtham.m81197@gmail.com>
-  description: Abstract task migration tool written in Go for Golang services. Database and non database migration management brought to your CLI. 
-  homepage: https://github.com/g14a/metana
-  license: Apache License 2.0
-  formats:
-  - deb
-  - rpm
-  - apk
+  - maintainer: Gowtham Munukutla <gowtham.m81197@gmail.com>
+    description: Abstract task migration tool written in Go for Golang services. Database and non database migration management brought to your CLI.
+    homepage: https://github.com/g14a/metana
+    license: Apache License 2.0
+    formats:
+      - deb
+      - rpm
+      - apk
