--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,7 +24,7 @@ brews:
   - name: metana 
     repository: 
       owner: g14a
-      name: metana
+      name: homebrew-metana
     homepage: https://github.com/g14a/metana
     description: An abstract migration tool written in Go for Go services.
 
